css/src/_director.scss
$button-padding: 1rem 5rem;
$button-margin: 0;
$top-overlap: 1.5rem;

.director {
	$off-page: 10000px;

	font-family: $opensans;
	line-height: 1.2;

	&.with-strategic-plan {
		margin-bottom: 0;
	}

	.layout-container {
		position: relative;
	}

	.text-column,
	.photo-column {
		padding-bottom: 1.75rem;
	}

	.text-column {
		padding-top: 1.75rem;
		position: relative;

		&::before {
			content: "";
			display: block;
			position: absolute;
			z-index: 1;
			bottom: 0;
			left: -1 * $off-page;
			right: -1 * $off-page;
			top: 0;
			background-color: $gray-lighter;
		}

		> * {
			position: relative;
			z-index: 2;
		}
	}

	.photo-column {
		z-index: 2;
	}

	.quote {
		text-align: left;
		padding-right: 2em;
		font-style: italic;
	}

	.creds {
		text-align: right;
		margin-top: 1em;
		font-size: .9rem;

		p {
			margin: 0;
		}
	}

	.strategic-plan {
		background-color: $gray-light-medium;
		padding: 2rem 0;
		text-align: center;

		.button {
			@include template-prop($p: background-color, $key: color, $pref-key: button-callout-bg);

			display: inline-block;
			background-color: $light-green;
			padding: 10px 50px;
			text-transform: uppercase;
			font-weight: bold;

			&, &:hover {
				text-decoration: none;
			}

			@media screen and (max-width: 430px){
				padding: 10px 25px;
			}
		}
	}

	@include breakpoint(390px down){
		.layout-container {
			padding: {
				left: 5%;
				right: 5%;
			}
		}

		.text-column:after {
			left: -15px;
			top: 135px;
			width: 60px;
		}

		.photo-column {
			right: 5%;
		}
	}

	@include breakpoint(small only){
		.layout-container {
			background-color: $dark-blue;
			padding: {
				left: $small-side-spacing;
				right: $small-side-spacing;
			}
		}

		.text-column {
			padding: {
				bottom: 40px;
				top: 175px;
			}
			font-size: 1.25rem;
		}

		.photo-column {
			position: absolute;
			right: 40px;
			top: -25px;
			width: 140px;
		}
	}

	@include breakpoint(medium){
		overflow: hidden;
		position: relative;
		z-index: 2;
		margin-top: -$top-overlap;

		.layout-container {
			@include xy-grid-container(800px, 0);
			@include xy-grid;
			z-index: 2;
		}

		.text-column,
		.photo-column {
			@include xy-cell-base();
		}

		.text-column {
			@include xy-cell(9, $gutter-type: padding, $gutters: 1.75rem);
			margin-top: $top-overlap;

			&::before {
				bottom: 0;
				left: -1 * $off-page;
				right: -1 * $off-page;
				top: 0;
			}

			@include breakpoint(1040px down){
				padding: {
					bottom: 2%;
					right: 1.25rem;
					top: 2%;
				}
			}

			@include breakpoint(905px down){
				padding: {
					bottom: 1%;
					right: 0;
					top: 1%;
				}
			}
		}

		.photo-column {
			@include xy-cell(3, $gutter-type: padding, $gutters: 1.75rem);
		}

		&.with-strategic-plan .photo-column {
			position: absolute;
			right: 0;
			top: 0;
		}

		.quote {
			padding-right: 0;
			font-size: 1.25rem;

			@include breakpoint(1040px down){
				padding-right: 1.25rem;
			}

			@include breakpoint(53.125em down){
				padding-right: 0;
			}
		}

		@include breakpoint(850px down){
			.quote {
				padding-right: 0;
			}

			.creds {
				margin-top: 0;
			}

			.text-column {
				padding: {
					left: 1rem;
					right: 0;
				}
			}

			.photo-column {
				padding: {
					left: 1rem;
					right: 1rem;
				}
			}
		}

		@include breakpoint(53.125em down){
			.creds {
				margin-top: 1rem;
			}
		}
	}
}

